[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"
include = ["src/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"

[[bin]]
name = "d01"
path = "src/d01/main.rs"

[[bin]]
name = "d02"
path = "src/d02/main.rs"
