[package]
name = "advent-of-code-2022"
version = "0.1.0"
edition = "2021"
include = ["src/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
regex = "1.7.3"

[[bin]]
name = "d01"
path = "src/d01/main.rs"

[[bin]]
name = "d02"
path = "src/d02/main.rs"

[[bin]]
name = "d03"
path = "src/d03/main.rs"

[[bin]]
name = "d04"
path = "src/d04/main.rs"

[[bin]]
name = "d05"
path = "src/d05/main.rs"

[[bin]]
name = "d06"
path = "src/d06/main.rs"

[[bin]]
name = "d07"
path = "src/d07/main.rs"

[[bin]]
name = "d08"
path = "src/d08/main.rs"

[[bin]]
name = "d23"
path = "src/d23/main.rs"

[[bin]]
name = "d24"
path = "src/d24/main.rs"

[[test]]
name = "d24"
path = "src/d24/main.rs"

[[bin]]
name = "d25"
path = "src/d25/main.rs"

